--- a/apps/ip1553/ip1553_bc_operation_interrupt/firmware/src/config/sam_rh71_ek/sam_rh71_ek.mhc/settings.yml
+++ b/apps/ip1553/ip1553_bc_operation_interrupt/firmware/src/config/sam_rh71_ek/sam_rh71_ek.mhc/settings.yml
@@ -10,4 +10,4 @@ settings:
   GENERATE_BACKUP: 'true'
   CMSISPath: .\dev_packs\arm\CMSIS\5.7.0
   MERGE_STRATEGY: USER_ALL
-  DFPPath: .\dev_packs\Microchip\SAMRH71_DFP\2.2.112\samrh71c\atdf\ATSAMRH71F20C.atdf
+  DFPPath: SAMRH71_DFP\2.5.142
