--- a/apps/spw/spw_escChar_tch_loopback/firmware/sam_rh71_ek.X/mcc-manifest-autosave.yml
+++ b/apps/spw/spw_escChar_tch_loopback/firmware/sam_rh71_ek.X/mcc-manifest-autosave.yml
@@ -2,20 +2,20 @@
 
 manifest_file_version: 1.0.0
 project: spw_escChar_tch_loopback
-creation_date: 2024-02-09T17:26:50.264+01:00[Europe/Paris]
+creation_date: 2025-02-11T15:17:50.822+01:00[Europe/Paris]
 operating_system: Windows 10
 mcc_mode: IDE
-mcc_mode_version: v6.15
+mcc_mode_version: v6.20
 device_name: ATSAMRH71F20C
 compiler: XC32 4.35
-mcc_version: 5.4.1
-mcc_core_version: 5.6.1
-content_manager_version: 4.3.2
+mcc_version: 5.5.1
+mcc_core_version: 5.7.1
+content_manager_version: 5.0.1
 is_mcc_offline: false
-is_using_prerelease_versions: false
+is_using_prerelease_versions: true
 mcc_content_registries: https://registry.npmjs.org/
 device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name: Harmony
-    V3, version: 1.4.1}
+    V3, version: 1.5.4}
 packs: {name: SAMRH71_DFP, version: 2.6.253}
 modules:
 - {name: csp, type: HARMONY, version: v3.18.2}
