--- a/apps/ip1553/ip1553_rt_operation_blocking/firmware/sam_rh71_ek.X/mcc-manifest-generated-success.yml
+++ b/apps/ip1553/ip1553_rt_operation_blocking/firmware/sam_rh71_ek.X/mcc-manifest-generated-success.yml
@@ -2,22 +2,22 @@
 
 manifest_file_version: 1.0.0
 project: ip1553_rt_operation_blocking
-creation_date: 2025-02-11T13:49:40.384+01:00[Europe/Paris]
+creation_date: 2025-02-25T13:36:35.445+01:00[Europe/Paris]
 operating_system: Windows 10
 mcc_mode: IDE
 mcc_mode_version: v6.20
 device_name: ATSAMRH71F20C
-compiler: XC32 4.35
+compiler: XC32 4.50
 mcc_version: 5.5.1
 mcc_core_version: 5.7.1
 content_manager_version: 5.0.1
 is_mcc_offline: false
-is_using_prerelease_versions: true
+is_using_prerelease_versions: false
 mcc_content_registries: https://registry.npmjs.org/
 device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name: Harmony
     V3, version: 1.5.4}
 packs: {name: SAMRH71_DFP, version: 2.6.253}
 modules:
-- {name: csp, type: HARMONY, version: v3.18.2}
-- {name: CMSIS_5, type: HARMONY, version: 5.8.0}
-- {name: aerospace, type: HARMONY, version: v3.5.0}
+- {name: csp, type: HARMONY, version: v3.21.0}
+- {name: CMSIS_5, type: HARMONY, version: 5.9.0}
+- {name: aerospace, type: HARMONY, version: v3.5.1}
