--- a/package.xml
+++ b/package.xml
@@ -2,5 +2,6 @@
 <Package name="aerospace_apps_sam_rh71">
     <Dependencies>
         <Dependency name="aerospace" version="v3.5.1"/>
+        <Dependency name="csp" version="v3.23.0"/>
     </Dependencies>
 </Package>
