--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
 package:
   format-version: "1.0.0"
   name: "aerospace_apps_sam_rh71"
-  version: "v3.2.0"
+  version: "v3.2.1"
   type: "application"
   status: "production"
   required: false
@@ -10,3 +10,6 @@ package:
     - name: "aerospace"
       type: "package"
       version: "v3.5.1"
+    - name: "csp"
+      type: "package"
+      version: "v3.23.0"
